<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yuome</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="signup">Registrieren</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="title_activity_main">Yuome</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_signup">Registrieren</string>
    <string name="repeat_password">Passwort wiederholen</string>
    <string name="logo">Yuome logo</string>
    <string name="drawer_open">Men\u00fc offen</string>
    <string name="drawer_close">Men\u00fc geschlossen</string>
    <string name="menu_icon">Hauptmen\u00fc</string>
    <string name="weiter">Weiter</string>
    <string name="new_contacts">neuen Kontakt hinzuf\u00fcgen</string>

    <color name="green">#338A30</color>
    <color name="white">#FFFFFF</color>

    <string-array name="main_menu">
        <item>Einkauf hinzuf\u00fcgen</item>
        <item>Meine \u00dcbersicht</item>
        <item>Meine Kassenzettel</item>
        <item>Kontakte</item>
        <item>Einstellungen</item>
    </string-array>

    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_manual_input_activity">ManualInputActivity</string>
    <string name="title_chose_contacts_activity"></string>
    <string name="title_debts_activity"></string>
    <string name="title_credits_activity"></string>
    <string name="title_credit_receipts_activity"></string>
    <string name="contacts_new_textfield_username">Nutzername oder E-Mail eingeben</string>
	<string name="serverURL">http://andibar.dyndns.org/Yuome/</string>

    <color name="black">#000000</color>

    <string name="title_activity_receipt_details">Details</string>
    <string name="inDept">Du schuldest </string>
    <string name="owing">Du bekommst von </string>
    <string name="beEeven">Euer Schuldenstand ist ausgeglichen.</string>
    <string name="contact_delete">Kontakt l\u00f6schen</string>
    <string name="contact_delete_error">L\u00f6schen fehlgeschlagen</string>
    <string name="contact_delete_error_description">Der Schuldenstand deines Freundes ist nicht ausgeglichen.</string>
    <string name="contact_delete_success">Kontakt wurde gel\u00f6scht</string>
    <string name="title_activity_contacts_attending">ContactsAttendingActivity</string>
    <string name="contacts_attending_title">Freundschaftsanfrage</string>
    <string name="contact_confirm">Freund annehmen</string>
    <string name="contact_decline">Freund ablehnen</string>
    <string name="dialog_contact_handling">Anfrage wird verarbeitet</string>
    <string name="name">Vorname</string>
    <string name="lastname">Nachname</string>
    <string name="email">E-Mail</string>

</resources>
