<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#338A30"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignupActivity" >

    <ImageView
        android:contentDescription="@string/logo"
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/EditUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Logo"
        android:hint="@string/username"
        android:textColorHint="#d6e7d5" />

    <EditText
        android:id="@+id/EditPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/EditUsername"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#d6e7d5" />
    
    <EditText
        android:id="@+id/RepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/EditPassword"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textColorHint="#d6e7d5" />

    <Button
        android:id="@+id/SignupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RepeatPassword"
        android:onClick="userSignup"
        android:text="@string/signup" />

</RelativeLayout>